      InitialContents. (CNY-2578)
    * Explicit calls to r.Requires are now honored in derived recipes.
      (CNY-1760)
    * The r.addArchive() method can now extract control contents from
      dpkg .deb archive files. (CNY-2967)

  o Client Changes:
    * Shim commitChangeSet() and getFileContents() calls now fall back to
      network access properly

  o Internal Changes:
    * Reimplemented dependency freezing in C
    * DependencySet objects now store the frozen depenedency by default
      and thaw it only when the thawed objects are needed (CNY-2410)
    * Intern frozen dependency and frozen StringCollection strings (CNY-2410)
    * DependenciesStream and FlavorStream objects now subclass from
      DependenciesSet instead of having a DependenciesSet object as an
      attribute. This saves one object per instance. (CNY-2410)


Changes in 2.0.24:
  o New Features:
    * includeConfigFile now interprets paths relative to the file
      currently being processed, for files and URIs. (CNY-2950)
    * includeConfigFile now supports a ~/path syntax to substitute the
      current user's home directory. (CNY-1650)

  o Client Changes:
    * Added support for getFileContents call to ShimNetClient (CNY-1669)
    * Added support for commitChangeSet and commitChangeSetFile to
      ShimNetClient (CNY-2545)
    * During promote operations use the cloned history for packages for
      the components of those packages as well. (CNY-1867)
    * Promote now uses group weak references to learn about all of the
      components for a package instead of downloading all of the package
      troves for the source. (CNY-1867)

  o Bug Fixes:
    * The ccs2tar script now correctly handles changeset files containing
      directories, symlinks, and other non-regular files. (CNY-2954)

  o Internal Changes:
    * More of the file installation path was moved into C for improved
      performance
    * Added misc.pack() and use it to freeze TroveRefsFilesStream and